Add persistence layer (liquibase + jooq)
* Replace double by BigDecimal

* Add liquibase for data migration

* Replace additional info map by transaction metadata list

* add database details to liquibase.properties file

* remove unnecessary dependencies

* rewrite liquibase changelogs from sql to xmls

* run liquibase updates automatically

* add jooq dependencies and configure it to run automatically after liquibase

* add base entity with control fields

* add repositories

* add repositories and persistence logic

* support high loads